--- a/index.css
+++ b/index.css
@@ -10,18 +10,38 @@ html {
 
 header {
   /* margin: 5px; */
-  background-image: url("https://picsum.photos/id/1004/1920/1080?blur");
+  /* background-image: url("./assets/4ab2d3cb3ad0d74955bcd4f5d49be7ce.gif");
   background-size: cover;
-  background-position: center;
+  background-position: center; */
   width: calc(100%);
   height: 100vh;
   background-color: lightslategray;
 }
 
+.video-container {
+  position: relative;
+  height: fit-content;
+}
+
+.video-container .overlay-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+.video-container video {
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+}
+
 nav {
+  position: relative;
   width: 100%;
   padding: 12px 50px;
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 1);
   height: 75px;
   display: flex;
   flex-direction: row;
@@ -29,13 +49,17 @@ nav {
 }
 
 .logo {
-  background-color: lightslategrey;
+  /* background-color: lightslategrey; */
   width: 50px;
   height: 50px;
 }
 
+.logo img {
+  width: 100%;
+}
+
 .menu-btn {
-  color: white;
+  color: purple;
   font-size: 32px;
   align-self: center;
   cursor: pointer;
@@ -65,6 +89,19 @@ main div img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.vignette {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: radial-gradient(
+    circle,
+    rgba(200, 200, 200, 0.1) 10%,
+    rgba(0, 0, 0, 0.4) 70%
+  );
 }
 
 .overlay {
